# sbv

./: .env.example  .gitignore  Cargo.toml  README.md
src/: embeddings.rs  entity.rs  graceful_shutdown.rs  main.rs  qdrant.rs
