[package]
name = "sbv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["macros"] }
lazy_static = "1.4.0"
qdrant-client = "1.1.2"
rust-bert = "0.20.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tonic = "0.9.2"
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time", "local-time"] }
uuid = "1.3.3"
